--- a/apps/webapp/src/styles.scss
+++ b/apps/webapp/src/styles.scss
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+@import '@fortawesome/fontawesome-free/css/all.min.css';
+@import 'primeicons/primeicons.css';
+@import 'primeng/resources/themes/saga-green/theme.css';
+@import 'primeng/resources/primeng.min.css';
+@import 'primeflex/primeflex.css';
+
+body,
+html {
+  height: 100%;
+  width: 100%;
+  margin: 0 !important;
+  font-family: sans-serif;
+}
