add the beginning of subscription

--- a/apps/webapp/src/app/modules/subscription/components/subscription-step-2/subscription-step-2.component.html
+++ b/apps/webapp/src/app/modules/subscription/components/subscription-step-2/subscription-step-2.component.html
@@ -16,14 +16,14 @@
         styleClass="w-full"
         [autoDisplayFirst]="false"
       ></p-dropdown>
-      <label for="database-type">Database type</label>
+      <label for="database-type">Offre</label>
     </span>
     <ng-container>
-      <span class="p-float-label w-full mt-3">
+      <span class="p-float-label w-full mt-4">
         <input id="database-username" type="text" pInputText class="w-full" />
-        <label for="database-username">Username</label>
+        <label for="database-username">Last</label>
       </span>
-      <span class="p-float-label w-full mt-3">
+      <span class="p-float-label w-full mt-4">
         <p-password
           inputId="database-password"
           styleClass="w-full"
@@ -33,11 +33,11 @@
         <label for="database-password">Password</label>
       </span>
     </ng-container>
-    <span class="p-float-label w-full mt-3">
+    <span class="p-float-label w-full mt-4">
       <input id="database-server" type="text" pInputText class="w-full" />
       <label for="database-server">Server</label>
     </span>
-    <span class="p-float-label w-full mt-3">
+    <span class="p-float-label w-full mt-4">
       <input id="database-database" type="text" pInputText class="w-full" />
       <label for="database-database">Database</label>
     </span>
