fix email service

--- a/apps/webservice/src/assets/email-templates/Welcome.hbs
+++ b/apps/webservice/src/assets/email-templates/Welcome.hbs
@@ -56,7 +56,7 @@
             ">
           <tr>
             <td style="padding-right: 0px; padding-left: 0px">
-              <img alt="Mail banner" src="{{ mailBannerSrc }}" style="
+              <img alt="Mail banner" src="" style="
                     text-decoration: none;
                     -ms-interpolation-mode: bicubic;
                     border: 0;
@@ -94,7 +94,7 @@
                     color: #202020;
                     font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
                   ">
-                Bonjour {{firstname}},<br />
+                Bonjour ,<br />
                 
               </div>
             </td>
