add error translations + replace email header

--- a/apps/webservice/src/assets/email-templates/Contact.hbs
+++ b/apps/webservice/src/assets/email-templates/Contact.hbs
@@ -48,7 +48,7 @@
             <tr>
               <td style='padding-right: 0px; padding-left: 0px'>
                 <img
-                  alt='Mail banner'
+                  alt='Email header'
                   src='{{emailHeaderSource}}'
                   style='
                     text-decoration: none;
@@ -73,7 +73,7 @@
                   padding: 30px;
                 '
               >
-                <div style='font-size: 22px; color: #5cb270'>
+                <div style='font-size: 22px; color: #4BC714'>
                   <strong>Nouvelle demande de support</strong>
                   🚜
                 </div>
@@ -101,7 +101,7 @@
                   {{lastname}}
                   <a
                     href='mailto:{{email}}'
-                    style='color:#5cb270'
+                    style='color:#4BC714'
                     target='_blank'
                   >
                     {{email}}
@@ -126,7 +126,7 @@
                   style='
                   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
                   line-height: 1.2;
-                  background-color: #5cb270;
+                  background-color: #4BC714;
                   color: #ffffff;
                   padding: 20px 10px;
                 '
@@ -144,7 +144,7 @@
                 à écrire à
                 <a
                   href='mailto:{{supportEmailAddress}}'
-                  style='color:#5cb270'
+                  style='color:#4BC714'
                   target='_blank'
                 >
                   {{supportEmailAddress}}
