--- a/apps/webservice/src/assets/email-templates/Welcome.hbs
+++ b/apps/webservice/src/assets/email-templates/Welcome.hbs
@@ -48,7 +48,7 @@
             <tr>
               <td style='padding-right: 0px; padding-left: 0px'>
                 <img
-                  alt='Mail banner'
+                  alt='Email header'
                   src='{{emailHeaderSource}}'
                   style='
                     text-decoration: none;
@@ -73,7 +73,7 @@
                   padding: 30px;
                 '
               >
-                <div style='font-size: 22px; color: #5cb270'>
+                <div style='font-size: 22px; color: #4BC714'>
                   <strong>Bienvenue sur Agrid !</strong> 🚜
                 </div>
               </td>
@@ -118,7 +118,7 @@
                   <tbody>
                     <tr>
                       <td
-                        style='background-color: #5cb270; border-radius: 8px; font-size: 16px; padding: 14px 18px;'
+                        style='background-color: #4BC714; border-radius: 8px; font-size: 16px; padding: 14px 18px;'
                       >
                         <a
                           href='{{webappUrl}}/#/signin'
@@ -145,7 +145,7 @@
                   style='
                   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
                   line-height: 1.2;
-                  background-color: #5cb270;
+                  background-color: #4BC714;
                   color: #ffffff;
                   padding: 20px 10px;
                 '
@@ -163,7 +163,7 @@
                 à écrire à
                 <a
                   href='mailto:{{supportEmailAddress}}'
-                  style='color:#5cb270'
+                  style='color:#4BC714'
                   target='_blank'
                 >
                   {{supportEmailAddress}}
