--- a/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
+++ b/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
@@ -14,18 +14,16 @@
                     <div class="full">
                         <div class="center-desk">
                             <div class="logo">
-                                <a href=""><img src="/assets/landing-page/images/logo.png" alt="#"></a>
+                                <a href="#"><img class="logo-img-svg" src="/assets/logo-agrid.svg" alt="#"></a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
-                    <div class="location_icon_bottum_tt">
+                    <div class="location_icon_bottum_tt header-list-container">
                         <ul>
-                            <li><img src="/assets/landing-page/icon/loc1.png" />UTBM</li>
-                            <li><img src="/assets/landing-page/icon/email1.png" />contact@agrid.ml</li>
-
-                            <li><img src="/assets/landing-page/icon/call1.png" />+12586954775</li>
+                            <li><a href="https://www.google.fr/maps/place/4+Rue+Edouard+Branly,+90000+Belfort/@47.6423659,6.8418829,17z/data=!3m1!4b1!4m5!3m4!1s0x47923b7c236fe117:0x9a0bb7c9a9dc9c81!8m2!3d47.6423623!4d6.8440716" target="_blank" class="hide-link"><img src="/assets/landing-page/icon/loc1.png" />UTBM, campus de Belfort</a></li>
+                            <li><a href="mailto:contact@agrid.ml" class="hide-link"><img src="/assets/landing-page/icon/email1.png" />contact@agrid.ml</a></li>
                         </ul>
                     </div>
                 </div>
@@ -33,16 +31,16 @@
             <div class="row">
                 <div class="col-md-12 location_icon_bottum">
                     <div class="row">
-                        <div class="col-md-8 ">
+                        <div class="col-md-8" style="text-align: center;">
                             <div class="menu-area">
                                 <div class="limit-box">
                                     <nav class="main-menu">
                                         <ul class="menu-area-main">
-                                            <li class="active"> <a href="index.html">Home</a> </li>
-                                            <li> <a href="#about">About</a> </li>
-                                            <li><a href="#product">Products</a></li>
-                                            <li><a href="#testimonial">Testimonial</a></li>
-                                            <li><a href="#contact">Contact Us</a></li>
+                                            <li class="active"> <a class="hide-link" href="index.html">Accueil</a> </li>
+                                            <li> <a class="hide-link" href="#about">A Propos</a> </li>
+                                            <li><a class="hide-link" href="#product">Produits</a></li>
+                                            <li><a class="hide-link" href="#testimonial">Temoignages</a></li>
+                                            <li><a class="hide-link" href="#contact">Contact</a></li>
 
                                         </ul>
                                     </nav>
@@ -50,12 +48,12 @@
                             </div>
 
                         </div>
-                        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                        <!-- <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
                             <form class="search">
                                 <input class="form-control" type="text" placeholder="Search">
                                 <button><img src="/assets/landing-page/images/search_icon.png"></button>
                             </form>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -76,8 +74,8 @@
                 <img class="first-slide" src="/assets/landing-page/images/banner.jpg" alt="First slide">
                 <div class="container relative">
                     <div class="carousel-caption ">
-                        <h1>Moon</h1>
-                        <span>FARMING COMPANY</span>
+                        <h1>Agrid</h1>
+                        <span>Le choix intelligent</span>
 
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi </p>
                         <a class="buynow" href="#about">About us</a><a class="buynow ggg" href="#">Get a quote</a>
@@ -89,8 +87,8 @@
                 <img class="second-slide" src="/assets/landing-page/images/banner.jpg" alt="Second slide">
                 <div class="container relative">
                     <div class="carousel-caption">
-                        <h1>Moon</h1>
-                        <span>FARMING COMPANY</span>
+                        <h1>Agrid</h1>
+                        <span>Le choix intelligent</span>
 
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi </p>
                         <a class="buynow" href="#about">About us</a><a class="buynow ggg" href="#">Get a quote</a>
@@ -102,8 +100,8 @@
                 <img class="third-slide" src="/assets/landing-page/images/banner.jpg" alt="Third slide">
                 <div class="container relative">
                     <div class="carousel-caption">
-                        <h1>Moon</h1>
-                        <span>FARMING COMPANY</span>
+                        <h1>Agrid</h1>
+                        <span>Le choix intelligent</span>
 
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi </p>
                         <a class="buynow" href="#about">About us</a><a class="buynow ggg" href="#">Get a quote</a>
@@ -128,7 +126,7 @@
 
             <div class="col-xl-5 col-lg-5 col-md-5 co-sm-l2">
                 <div class="about_box">
-                    <h2>About moon<br><strong class="black"> Farm and company</strong></h2>
+                    <h2>A propos d'Agrid<br><strong class="black"> Le choix intelligent</strong></h2>
                     <p>dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex</p>
                     <a href="#">Read More</a>
                 </div>
@@ -232,7 +230,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="title">
-                        <h2>Moon <strong class="black"> products</strong></h2>
+                        <h2>Agrid <strong class="black"> products</strong></h2>
                     </div>
                 </div>
             </div>
