--- a/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
+++ b/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
@@ -7,72 +7,39 @@
 <!-- end loader -->
 <!-- header -->
 <header>
-    <!-- header inner -->
-    <div class="header">
-
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col logo_section">
-                    <div class="full">
-                        <div class="center-desk">
-                            <div class="logo">
-                                <a href="#"><img class="logo-img-svg" src="/assets/logo-agrid.svg" alt="#"></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
-                    <div class="location_icon_bottum_tt header-list-container">
-                        <ul>
-                            <li><a href="https://www.google.fr/maps/place/4+Rue+Edouard+Branly,+90000+Belfort/@47.6423659,6.8418829,17z/data=!3m1!4b1!4m5!3m4!1s0x47923b7c236fe117:0x9a0bb7c9a9dc9c81!8m2!3d47.6423623!4d6.8440716" target="_blank" class="hide-link"><img src="/assets/landing-page/icon/loc1.png" />UTBM, campus de Belfort</a></li>
-                            <li><a href="mailto:contact@agrid.ml" class="hide-link"><img src="/assets/landing-page/icon/email1.png" />contact@agrid.ml</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 location_icon_bottum">
-                    <div class="row">
-                        <div class="col-md-8" style="text-align: center;">
-                            <div class="menu-area">
-                                <div class="limit-box">
-                                    <nav class="main-menu">
-                                        <ul class="menu-area-main">
-                                            <li class="active"> <a class="hide-link" href="index.html">Accueil</a> </li>
-                                            <li> <a class="hide-link" href="#about">A Propos</a> </li>
-                                            <li><a class="hide-link" href="#product">Produits</a></li>
-                                            <li><a class="hide-link" href="#testimonial">Temoignages</a></li>
-                                            <li><a class="hide-link" href="#contact">Contact</a></li>
-
-                                        </ul>
-                                    </nav>
-                                </div>
-                            </div>
-
-                        </div>
-                        <!-- <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
-                            <form class="search">
-                                <input class="form-control" type="text" placeholder="Search">
-                                <button><img src="/assets/landing-page/images/search_icon.png"></button>
-                            </form>
-                        </div> -->
-                    </div>
-                </div>
+  <!-- header inner -->
+  <div class="header">
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col logo_section">
+          <div class="full">
+            <div class="center-desk">
+              <div class="logo">
+                <a href=""
+                  ><img src="/assets/landing-page/images/logo.png" alt="#"
+                /></a>
+              </div>
             </div>
           </div>
         </div>
         <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
           <div class="location_icon_bottum_tt">
             <ul>
-              <li><img src="/assets/landing-page/icon/loc1.png" />UTBM</li>
               <li>
-                <img
-                  src="/assets/landing-page/icon/email1.png"
-                />contact@agrid.ml
+                <a
+                  href="https://www.google.fr/maps/place/4+Rue+Edouard+Branly,+90000+Belfort/@47.6423659,6.8418829,17z/data=!3m1!4b1!4m5!3m4!1s0x47923b7c236fe117:0x9a0bb7c9a9dc9c81!8m2!3d47.6423623!4d6.8440716"
+                  target="_blank"
+                  class="hide-link"
+                  ><img src="/assets/landing-page/icon/loc1.png" />UTBM, campus
+                  de Belfort</a
+                >
               </li>
-
               <li>
-                <img src="/assets/landing-page/icon/call1.png" />+12586954775
+                <a href="mailto:contact@agrid.ml" class="hide-link"
+                  ><img
+                    src="/assets/landing-page/icon/email1.png"
+                  />contact@agrid.ml</a
+                >
               </li>
             </ul>
           </div>
@@ -86,11 +53,23 @@
                 <div class="limit-box">
                   <nav class="main-menu">
                     <ul class="menu-area-main">
-                      <li class="active"><a href="index.html">Home</a></li>
-                      <li><a href="#about">About</a></li>
-                      <li><a href="#product">Products</a></li>
-                      <li><a href="#testimonial">Testimonial</a></li>
-                      <li><a href="#contact">Contact Us</a></li>
+                      <ul class="menu-area-main">
+                        <li class="active">
+                          <a class="hide-link" href="index.html">Accueil</a>
+                        </li>
+                        <li><a class="hide-link" href="#about">A Propos</a></li>
+                        <li>
+                          <a class="hide-link" href="#product">Produits</a>
+                        </li>
+                        <li>
+                          <a class="hide-link" href="#testimonial"
+                            >Temoignages</a
+                          >
+                        </li>
+                        <li>
+                          <a class="hide-link" href="#contact">Contact</a>
+                        </li>
+                      </ul>
                     </ul>
                   </nav>
                 </div>
@@ -113,52 +92,33 @@
 </header>
 <!-- end header -->
 <section class="slider_section">
-    <div id="myCarousel" class="carousel slide banner-main" data-ride="carousel">
-        <ul class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class=""></li>
-            <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="2" class=""></li>
-        </ul>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="first-slide" src="/assets/landing-page/images/banner.jpg" alt="First slide">
-                <div class="container relative">
-                    <div class="carousel-caption ">
-                        <h1>Agrid</h1>
-                        <span>Le choix intelligent</span>
+  <div id="myCarousel" class="carousel slide banner-main" data-ride="carousel">
+    <ul class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class=""></li>
+      <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="2" class=""></li>
+    </ul>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img
+          class="first-slide"
+          src="/assets/landing-page/images/banner.jpg"
+          alt="First slide"
+        />
+        <div class="container relative">
+          <div class="carousel-caption">
+            <h1>Agrid</h1>
+            <span>Le choix intelligent</span>
 
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi </p>
-                        <a class="buynow" href="#about">About us</a><a class="buynow ggg" href="#">Get a quote</a>
-
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class="second-slide" src="/assets/landing-page/images/banner.jpg" alt="Second slide">
-                <div class="container relative">
-                    <div class="carousel-caption">
-                        <h1>Agrid</h1>
-                        <span>Le choix intelligent</span>
-
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi </p>
-                        <a class="buynow" href="#about">About us</a><a class="buynow ggg" href="#">Get a quote</a>
-
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class="third-slide" src="/assets/landing-page/images/banner.jpg" alt="Third slide">
-                <div class="container relative">
-                    <div class="carousel-caption">
-                        <h1>Agrid</h1>
-                        <span>Le choix intelligent</span>
-
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi </p>
-                        <a class="buynow" href="#about">About us</a><a class="buynow ggg" href="#">Get a quote</a>
-
-                    </div>
-                </div>
-            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi
+            </p>
+            <a class="buynow" href="#about">About us</a
+            ><a class="buynow ggg" href="#">Get a quote</a>
+          </div>
         </div>
       </div>
       <div class="carousel-item">
@@ -227,21 +187,24 @@
 
 <!-- about -->
 <div id="about" class="about">
-    <div class="container">
-        <div class="row">
-
-            <div class="col-xl-5 col-lg-5 col-md-5 co-sm-l2">
-                <div class="about_box">
-                    <h2>A propos d'Agrid<br><strong class="black"> Le choix intelligent</strong></h2>
-                    <p>dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex</p>
-                    <a href="#">Read More</a>
-                </div>
-            </div>
-            <div class="col-xl-7 col-lg-7 col-md-7 co-sm-l2">
-                <div class="about_img">
-                    <figure><img src="/assets/landing-page/images/about.png" alt="img" /></figure>
-                </div>
-            </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-5 col-lg-5 col-md-5 co-sm-l2">
+        <div class="about_box">
+          <h2>
+            A propos d'Agrid<br /><strong class="black">
+              Le choix intelligent</strong
+            >
+          </h2>
+          <p>
+            dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+          </p>
+          <a href="#">Read More</a>
         </div>
       </div>
       <div class="col-xl-7 col-lg-7 col-md-7 co-sm-l2">
@@ -357,14 +320,11 @@
 <div id="product" class="product">
   <div class="container">
     <div class="container">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="title">
-                        <h2>Agrid <strong class="black"> products</strong></h2>
-                    </div>
-                </div>
-            </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="title">
+            <h2>Agrid <strong class="black"> products</strong></h2>
+          </div>
         </div>
       </div>
     </div>
