test another way to use ngx-stripe

--- a/apps/webapp/src/app/modules/subscription/components/subscription-step-4/subscription-step-4.component.html
+++ b/apps/webapp/src/app/modules/subscription/components/subscription-step-4/subscription-step-4.component.html
@@ -15,3 +15,7 @@
   </ng-container>
   <button (click)="pay()">PAY</button>
 </div> -->
+
+<!-- <ngx-stripe-card></ngx-stripe-card> -->
+
+<button type="submit">CREATE TOKEN</button>
