Start Adaptation template #5

--- a/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
+++ b/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
@@ -7,14 +7,15 @@
       ><img
         _ngcontent-qrt-c150=""
         src="/assets/logo-agrid.svg"
-        alt="Sakai Logo"
+        alt="Agrid Logo"
         class="mr-0 lg:mr-2"
         height="50"
-      /><span
+      />
+      <!-- <span
         _ngcontent-qrt-c150=""
         class="text-gray-900 font-medium text-2xl line-height-3 mr-8"
-        >SAKAI</span
-      >
+        >SAKAI
+      </span> -->
     </a>
     <a
       _ngcontent-qrt-c150=""
@@ -109,13 +110,13 @@
           >Eu sem integer</span
         >eget magna fermentum
       </h1>
-      <p
+      <!-- <p
         _ngcontent-qrt-c150=""
         class="font-normal text-2xl line-height-3 md:mt-3 text-gray-700"
       >
         Sed blandit libero volutpat sed cras. Fames ac turpis egestas integer.
         Placerat in egestas erat...
-      </p>
+      </p> -->
       <button
         _ngcontent-qrt-c150=""
         pbutton=""
@@ -712,7 +713,8 @@
       _ngcontent-qrt-c150=""
       class="grid justify-content-between mt-8 md:mt-0"
     >
-      <div _ngcontent-qrt-c150="" class="col-12 lg:col-4 p-0 md:p-3">
+      <!-- TODO card -->
+      <div _ngcontent-qrt-c150="" class="col-12 lg:col-3 p-0 md:p-2">
         <div
           _ngcontent-qrt-c150=""
           class="p-3 flex flex-column border-200"
@@ -729,8 +731,8 @@
             <span
               _ngcontent-qrt-c150=""
               class="text-5xl font-bold mr-2 text-gray-900"
-              >$0</span
-            ><span _ngcontent-qrt-c150="" class="text-gray-600">per month</span
+              >5&euro;</span
+            ><span _ngcontent-qrt-c150="" class="text-gray-600">par mois</span
             ><button
               _ngcontent-qrt-c150=""
               pbutton=""
@@ -794,9 +796,7 @@
           </ul>
         </div>
       </div>
-      <div
-        _ngcontent-qrt-c150=""
-        class="col-12 lg:col-4 p-0 md:p-3 mt-4 md:mt-0"
+      <div _ngcontent-qrt-c150="" class="col-12 lg:col-3 p-0 md:p-2 mt-3 md:mt-0"
       >
         <div
           _ngcontent-qrt-c150=""
@@ -816,8 +816,8 @@
             <span
               _ngcontent-qrt-c150=""
               class="text-5xl font-bold mr-2 text-gray-900"
-              >$1</span
-            ><span _ngcontent-qrt-c150="" class="text-gray-600">per month</span
+              >15&euro;</span
+            ><span _ngcontent-qrt-c150="" class="text-gray-600">par mois</span
             ><button
               _ngcontent-qrt-c150=""
               pbutton=""
@@ -881,9 +881,7 @@
           </ul>
         </div>
       </div>
-      <div
-        _ngcontent-qrt-c150=""
-        class="col-12 lg:col-4 p-0 md:p-3 mt-4 md:mt-0"
+      <div _ngcontent-qrt-c150="" class="col-12 lg:col-3 p-0 md:p-2 mt-3 md:mt-0"
       >
         <div
           _ngcontent-qrt-c150=""
@@ -901,8 +899,8 @@
             <span
               _ngcontent-qrt-c150=""
               class="text-5xl font-bold mr-2 text-gray-900"
-              >$999</span
-            ><span _ngcontent-qrt-c150="" class="text-gray-600">per month</span
+              >30&euro;</span
+            ><span _ngcontent-qrt-c150="" class="text-gray-600">par mois</span
             ><button
               _ngcontent-qrt-c150=""
               pbutton=""
@@ -952,6 +950,88 @@
               ></i
               ><span _ngcontent-qrt-c150="" class="text-xl line-height-3"
                 >50 Support Ticket</span
+              >
+            </li>
+            <li _ngcontent-qrt-c150="" class="py-2">
+              <i
+                _ngcontent-qrt-c150=""
+                class="pi pi-fw pi-check text-xl text-cyan-500 mr-2"
+              ></i
+              ><span _ngcontent-qrt-c150="" class="text-xl line-height-3"
+                >Free Shipping</span
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div _ngcontent-qrt-c150="" class="col-12 lg:col-3 p-0 md:p-2 mt-3 md:mt-0">
+        <div
+          _ngcontent-qrt-c150=""
+          class="p-3 flex flex-column border-200"
+          style="border: 2px solid; border-radius: 10px"
+        >
+          <h3 _ngcontent-qrt-c150="" class="text-gray-900 text-center">Free</h3>
+          <img
+            _ngcontent-qrt-c150=""
+            src="assets/layout/images/free.png"
+            alt=""
+            class="w-10 h-10 mx-auto"
+          />
+          <div _ngcontent-qrt-c150="" class="my-5 text-center">
+            <span
+              _ngcontent-qrt-c150=""
+              class="text-5xl font-bold mr-2 text-gray-900"
+              >50&euro;</span
+            ><span _ngcontent-qrt-c150="" class="text-gray-600">par mois</span
+            ><button
+              _ngcontent-qrt-c150=""
+              pbutton=""
+              pripple=""
+              label="Get Started"
+              class="p-ripple p-element block mx-auto mt-4 p-button-rounded border-none ml-3 font-light line-height-2 bg-blue-500 p-button p-component"
+            >
+              <span class="p-ink"></span
+              ><span class="p-button-label">Get Started</span>
+            </button>
+          </div>
+          <p-divider
+            _ngcontent-qrt-c150=""
+            class="p-element w-full bg-surface-200"
+            ><div
+              role="separator"
+              class="p-divider p-component p-divider-horizontal p-divider-solid p-divider-left"
+            >
+              <div class="p-divider-content"></div></div
+          ></p-divider>
+          <ul
+            _ngcontent-qrt-c150=""
+            class="my-5 list-none p-0 flex text-gray-900 flex-column"
+          >
+            <li _ngcontent-qrt-c150="" class="py-2">
+              <i
+                _ngcontent-qrt-c150=""
+                class="pi pi-fw pi-check text-xl text-cyan-500 mr-2"
+              ></i
+              ><span _ngcontent-qrt-c150="" class="text-xl line-height-3"
+                >Site de présentation</span
+              >
+            </li>
+            <li _ngcontent-qrt-c150="" class="py-2">
+              <i
+                _ngcontent-qrt-c150=""
+                class="pi pi-fw pi-check text-xl text-cyan-500 mr-2"
+              ></i
+              ><span _ngcontent-qrt-c150="" class="text-xl line-height-3"
+                >F.A.Q. et Formulaire</span
+              >
+            </li>
+            <li _ngcontent-qrt-c150="" class="py-2">
+              <i
+                _ngcontent-qrt-c150=""
+                class="pi pi-fw pi-check text-xl text-cyan-500 mr-2"
+              ></i
+              ><span _ngcontent-qrt-c150="" class="text-xl line-height-3"
+                >E-Boutique</span
               >
             </li>
             <li _ngcontent-qrt-c150="" class="py-2">
