Internal redirection + adapt template #5 #20

--- a/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.scss
+++ b/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.scss
@@ -20,3 +20,16 @@
     width: 30rem;
     margin-left: 3rem;
 }
+
+.agrid-text {
+    color: #4BC714;
+    font-weight: bold;
+}
+
+.img-border-radius {
+    border-radius: 3rem;
+}
+
+.img-border-radius-round {
+    border-radius: 50%;
+}
