add webapp translation

--- a/apps/webapp/src/app/modules/subscription/components/subscription-step-4/subscription-step-4.component.html
+++ b/apps/webapp/src/app/modules/subscription/components/subscription-step-4/subscription-step-4.component.html
@@ -1,23 +1,1 @@
-<!-- <div [formGroup]="stripeTest">
-  <mat-form-field class="example-full-width" appearance="fill">
-    <input matInput placeholder="name" formControlName="name" />
-  </mat-form-field>
-  <mat-form-field class="example-full-width" appearance="fill">
-    <input
-      matInput
-      placeholder="amount"
-      type="number"
-      formControlName="amount"
-    />
-  </mat-form-field>
-  <ng-container *ngIf="elementsOptions?.clientSecret as clientSecret">
-    <ngx-stripe-payment [clientSecret]="clientSecret"> </ngx-stripe-payment>
-  </ng-container>
-  <button (click)="pay()">PAY</button>
-</div> -->
-
-<ngx-stripe-payment-request-button
-  [paymentOptions]="paymentRequestOptions"
-></ngx-stripe-payment-request-button>
-
-<button type="submit">CREATE TOKEN</button>
+<div>{{ 'WELCOME' | translate }}</div>
