--- a/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
+++ b/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
@@ -82,13 +82,13 @@
         _ngcontent-qrt-c150=""
         class="flex justify-content-between lg:block border-top-1 lg:border-top-none surface-border py-3 lg:py-0 mt-3 lg:mt-0"
       >
-      <!-- TODO add redirec to sign in -->
         <button
           _ngcontent-qrt-c150=""
           pbutton=""
           pripple=""
           label="Login"
           class="p-ripple p-element p-button-text p-button-rounded border-none font-light line-height-2 text-500 p-button p-component"
+          [routerLink]="['/signin']"
         >
           <span class="p-ink"></span
           ><span class="p-button-label" style="color: #4BC714;">Connexion</span></button
