--- a/apps/webapp/src/app/modules/login/components/signin-page/signin-page.component.html
+++ b/apps/webapp/src/app/modules/login/components/signin-page/signin-page.component.html
@@ -1,1 +1,112 @@
-<div>works</div>
+<div
+  
+  class="surface-card flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden"
+>
+  <div
+    
+    class="grid justify-content-center p-2 lg:p-0"
+    style="min-width: 80%"
+  >
+    <div  class="col-12 mt-5 xl:mt-0 text-center">
+      <img
+        
+        src="assets/logo-agrid.svg"
+        alt="Sakai logo"
+        class="mb-5"
+        style="width: 10rem;"
+      />
+    </div>
+    <div
+      class="col-12 xl:col-6"
+      style="
+        border-radius: 56px;
+        padding: 0.3rem;
+        background: linear-gradient(
+          180deg,
+          rgba(75, 199, 20, 0.4) 10%,
+          rgba(232, 190, 40, 0) 30%
+        );
+      "
+    >
+      <div
+        class="surface-card h-full w-full m-0 py-7 px-4"
+        style="border-radius: 53px"
+      >
+        <div class="text-center mb-5">
+          <div
+            class="text-900 text-3xl font-medium mb-3"
+          >
+            Bienvenue
+          </div>
+          <span class="text-600 font-medium"
+            >Connecter vous pour continuer</span
+          >
+        </div>
+
+        <div class="w-full md:w-10 mx-auto">
+
+          <label
+            for="email1"
+            class="block text-900 text-xl font-medium mb-2"
+            >Email</label
+          ><input
+            id="email1"
+            type="text"
+            pinputtext=""
+            class="p-inputtext p-component p-element w-full mb-3"
+            style="padding: 1rem"
+          />
+
+          <label
+            for="password1"
+            class="block text-900 font-medium text-xl mb-2"
+            >Mot de passe</label
+          >
+          <p-password
+            id="password1"
+            placeholder="Password"
+            styleclass="w-full mb-3"
+            class="w-full"
+            >
+          </p-password>
+          
+          <button
+            pbutton=""
+            pripple=""
+            label="Sign In"
+            class="p-element p-ripple w-full p-3 text-xl p-button p-component mt-6"
+          >
+            <span class="p-button-label">Connexion</span
+            ><span class="p-ink"></span>
+          </button>
+        </div>
+
+        <div class="w-full md:w-10 mx-auto mt-4" style="text-align: center;">
+            <button
+                _ngcontent-qrt-c150=""
+                pbutton=""
+                pripple=""
+                label="Login"
+                class="p-ripple p-element p-button-text p-button-rounded border-none font-light line-height-2 text-500 p-button p-component"
+                [routerLink]="['/']"
+            >
+                <span class="p-ink"></span>
+                <span class="p-button-label" style="color: #4BC714;">Accueil</span>
+            </button>
+            <button
+                _ngcontent-qrt-c150=""
+                pbutton=""
+                pripple=""
+                label="Login"
+                class="p-ripple p-element p-button-text p-button-rounded border-none font-light line-height-2 text-500 p-button p-component"
+                [routerLink]="['/']"
+            >
+                <span class="p-ink"></span>
+                <span class="p-button-label" style="color: #E8BE28;">Pas encore inscrit ?</span>
+            </button>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
