adapt template + routes #27 #23

--- a/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
+++ b/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
@@ -858,6 +858,7 @@
             >
             <!-- TODO add redirect to sign in --><a
               _ngcontent-qrt-c150=""
+              [routerLink]="['/signin']"
               class="line-height-3 text-xl block cursor-pointer mb-2 text-gray-700 menu-link"
               >Connexion</a
             >
