add routes to subscription #5 #22 #27

--- a/apps/webapp/src/app/modules/login/components/signin-page/signin-page.component.html
+++ b/apps/webapp/src/app/modules/login/components/signin-page/signin-page.component.html
@@ -67,14 +67,13 @@
             pripple=""
             label="Login"
             class="p-ripple p-element p-button-text p-button-rounded border-none font-light line-height-2 text-500 p-button p-component"
-            [routerLink]="['/']"
+            [routerLink]="['/subscription']"
           >
             <span class="p-ink"></span>
             <span class="p-button-label" style="color: #e8be28"
               >Pas encore inscrit ?</span
             >
           </button>
-          <!-- TODO redirect to subscription -->
         </div>
 
       </div>
