--- a/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
+++ b/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
@@ -93,9 +93,9 @@
           <span class="p-ink"></span
           ><span class="p-button-label" style="color: #4BC714;">Connexion</span></button
         >
-        <!-- TODO add redirec to subscription -->
         <button
           _ngcontent-qrt-c150=""
+          [routerLink]="['/subscription']"
           pbutton=""
           pripple=""
           label="Register"
@@ -124,9 +124,9 @@
       >
         Vous souhaitez avoir une présence sur Internet ? <br>Vous voulez que vos clients vous localisent plus facilement ?
       </p>
-      <!-- TODO add redirect to subscription -->
       <button
         _ngcontent-qrt-c150=""
+        [routerLink]="['/subscription']"
         pbutton=""
         pripple=""
         type="button"
@@ -337,9 +337,9 @@
       <!-- <h3 _ngcontent-qrt-c150="" class="text-gray-900 font-normal mb-2">
         Matchless Pricing
       </h3> -->
-      <!-- TODO add redirect to subscription -->
       <button
         _ngcontent-qrt-c150=""
+        [routerLink]="['/subscription']"
         pbutton=""
         pripple=""
         type="button"
@@ -850,13 +850,13 @@
             >
               Profil
             </h4>
-            <!-- TODO add redirect to subscription -->
             <a
               _ngcontent-qrt-c150=""
+              [routerLink]="['/subscription']"
               class="line-height-3 text-xl block cursor-pointer mb-2 text-gray-700 menu-link"
               >Inscription</a
             >
-            <!-- TODO add redirect to sign in --><a
+            <a
               _ngcontent-qrt-c150=""
               [routerLink]="['/signin']"
               class="line-height-3 text-xl block cursor-pointer mb-2 text-gray-700 menu-link"
