add 'HT' tag to prices

--- a/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
+++ b/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
@@ -371,7 +371,7 @@
               _ngcontent-qrt-c150=""
               class="text-5xl font-bold mr-2 text-gray-900"
               >5&euro;</span
-            ><span _ngcontent-qrt-c150="" class="text-gray-600">par mois</span
+            ><span _ngcontent-qrt-c150="" class="text-gray-600">HT par mois</span
             >
           </div>
           <p-divider
@@ -477,7 +477,7 @@
               _ngcontent-qrt-c150=""
               class="text-5xl font-bold mr-2 text-gray-900"
               >25&euro;</span
-            ><span _ngcontent-qrt-c150="" class="text-gray-600">par mois</span
+            ><span _ngcontent-qrt-c150="" class="text-gray-600">HT par mois</span
             >
           </div>
           <p-divider
@@ -582,7 +582,7 @@
               _ngcontent-qrt-c150=""
               class="text-5xl font-bold mr-2 text-gray-900"
               >40&euro;</span
-            ><span _ngcontent-qrt-c150="" class="text-gray-600">par mois</span
+            ><span _ngcontent-qrt-c150="" class="text-gray-600">HT par mois</span
             >
           </div>
           <p-divider
@@ -686,7 +686,7 @@
               _ngcontent-qrt-c150=""
               class="text-5xl font-bold mr-2 text-gray-900"
               >50&euro;</span
-            ><span _ngcontent-qrt-c150="" class="text-gray-600">par mois</span
+            ><span _ngcontent-qrt-c150="" class="text-gray-600">HT par mois</span
             >
           </div>
           <p-divider
