start to add spinner

--- a/apps/webapp/src/app/modules/subscription/components/subscription-step-1/subscription-step-1.component.html
+++ b/apps/webapp/src/app/modules/subscription/components/subscription-step-1/subscription-step-1.component.html
@@ -1,4 +1,4 @@
-<p-card styleClass="m-2">
+<!-- <p-card styleClass="m-2">
   <p-carousel
     [value]="availablePlans"
     [numVisible]="3"
@@ -22,10 +22,10 @@
     </ng-template>
   </p-carousel>
   <div class="flex flex-row">
-    <a
-      [routerLink]="['/showcase']"
-      class="m-auto text-green-600"
+    <a [routerLink]="['/showcase']" class="m-auto text-green-600"
       >Découvrir nos offres</a
     >
   </div>
-</p-card>
+</p-card> -->
+
+<p-progressSpinner></p-progressSpinner>
